--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         <div class="form-group">
           <label for="todo">To do</label>
           <input class="form-control" type="text" name="todo">
+          <input class="form-control" type="text" name="otherField">
         </div>
         <button type="submit" class="btn btn-default">Add Todo</button>
       </form>
