--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,10 @@
 <html>
   <head>
-    <script src="http://code.jquery.com/jquery-2.2.0.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-    <script src="todo.js"></script>
+    <script src="jspm_packages/system.js"></script>
+    <script src="config.js"></script>
+    <script>
+      System.import('todo');
+    </script>
     <title>Hello world!</title>
   </head>
   <body>
@@ -24,10 +18,9 @@
       <form method="POST" action="/todo/new">
         <div class="form-group">
           <label for="todo">To do</label>
-          <input class="form-control" type="text" name="todo">
-          <input class="form-control" type="text" name="otherField">
+          <input class="form-control" type="text" name="todo" placeholder="To do…">
         </div>
-        <button type="submit" class="btn btn-default">Add Todo</button>
+        <button type="submit" class="btn btn-primary">Add Todo</button>
       </form>
     </div>
   </body>
