--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,6 @@
 <html>
   <head>
-    <script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
-    <script>
-      System.import('todo');
-    </script>
+    <script src="/bundle.js"></script>
     <title>Hello world!</title>
   </head>
   <body>
