--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,16 @@
   <head>
     <script src="/bundle.js"></script>
     <title>Hello world!</title>
-  </head>
+  <!-- </head> -->
   <body>
     <div class="container">
-      <h1>Hello world!</h1>
+      <h1>Hello world!!!!!</h1>
       <p>This is coming from the <code>public/index.html</code> file</p>
+
+      <form method="POST" action="/my-form">
+          <input type="text" name="input">
+          <button type="submit">Submit</button>
+      </form>
     </div>
   </body>
 </html>
